# ai-news-aggregator

./: .env.template  .gitignore  Guidebook.md  README.md  ai_news_aggregator_blueprint.md  main.py  pyproject.toml
.claude/: settings.local.json
app/agents/: base_agent.py  curator_agent.py  digest_agent.py  email_agent.py
app/database/: connection.py  init_db.py  models.py  repository.py
app/scrapers/: ai_news.py  base.py  youtube.py
app/services/: digests.py  email.py  pipeline.py  scrapers.py
docker/: docker-compose.yml
profiles/: user_profile.json
